Adding some styling

--- a/src/index.css
+++ b/src/index.css
@@ -12,13 +12,28 @@ code {
     monospace;
 }
 
+#root{
+  background-color: rgba(0,0,0,0.87);
+}
+
 /*APP NAVBAR*/
 .nav-items-container{
   width: 100%;
 }
 
-.custom-nav-item{
-  margin: 5px 15px;
+.main-logo{
+  margin: 10px 20px;
+  font-size: 35px;
+  font-weight: bold;
+  color: #B9090B!important;
+  text-decoration: none!important;
+}
+
+.nav-link-text{
+  margin: 10px 15px;
+  margin-top: 20px;
+  color: #B9090B!important;
+  text-decoration: none!important;
 }
 
 .pusher-nav-item{
@@ -26,6 +41,11 @@ code {
 }
 
 /*HOME PAGE*/
+.page-container{
+  background: rgba(0,0,0,0.87);
+  color: #B9090B;
+}
+
 .items-container{
   display: flex;
   flex-direction: row;
@@ -50,6 +70,83 @@ code {
   height: 250px;
 }
 
+.customs-slider-big-wrapper{
+  height: 100%;
+}
+
 .slider-wrapper{
   height: 400px;
+}
+
+.custom-inner-items-wrapper{
+  height: 100%;
+}
+
+.right-chevron-wrapper{
+  width: 100%;
+}
+
+.left-chevron-wrapper{
+  width: 100%;
+}
+
+/*MEDIA QUERIES*/
+@media screen and (min-width: 240px) and (max-width: 375px)  {
+  
+}
+
+@media screen and (min-width: 375px) and (max-width: 568px)  {
+
+}
+
+@media screen and (min-width: 568px) and (max-width: 768px)  {
+  /*HOME PAGE*/
+  .category-wrapper{
+    padding: 10px;
+    margin: 20px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 992px)  {
+  /*HOME PAGE*/
+  .category-wrapper{
+    padding: 10px;
+    margin: 20px;
+  }
+
+  .slider-wrapper{
+    height: 200px;
+  }
+}
+
+@media screen and (min-width: 992px) and (max-width: 1200px)  {
+  /*HOME PAGE*/
+  .category-wrapper{
+    padding: 10px;
+    margin: 20px;
+  }
+
+  .slider-wrapper{
+    height: 200px;
+  }
+}
+
+@media screen and (min-width: 1200px) and (max-width: 1400px)  {
+
+}
+
+@media screen and (min-width: 1700px) and (max-width: 1900px)  {
+  /*HOME PAGE*/
+  .category-wrapper{
+    padding: 20px;
+    margin: 250px 30px;
+  }
+
+  .first-category-wrapper{
+    margin-top: 50px;
+  }
+
+  .slider-wrapper{
+    height: 500px;
+  }
 }
