--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 body {
+  background-color: black!important;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -40,6 +41,20 @@ code {
   flex-basis: 55%;
 }
 
+/*SEARCH WRAPPER*/
+
+.search-bar-wrapper{
+  width: 100%;
+}
+
+.btn-span{
+  background-color: black!important;
+}
+
+.input-group-custom-wrapper{
+  border: black!important;
+}
+
 /*HOME PAGE*/
 .page-container{
   background: rgba(0,0,0,0.87);
@@ -55,7 +70,7 @@ code {
 
 .category-wrapper{
   padding: 10px;
-  margin: 125px 20px;
+  margin: 125px 70px;
 }
 
 .first-category-wrapper{
@@ -71,11 +86,11 @@ code {
 }
 
 .customs-slider-big-wrapper{
-  height: 100%;
+  height: 200px;
 }
 
 .slider-wrapper{
-  height: 400px;
+  height: 100%;
 }
 
 .custom-inner-items-wrapper{
@@ -92,30 +107,82 @@ code {
 
 /*MEDIA QUERIES*/
 @media screen and (min-width: 240px) and (max-width: 375px)  {
-  
+  /*HOME PAGE*/
+  .category-wrapper{
+    padding: 10px;
+    margin: -120px 0;
+  }
+
+  .first-category-wrapper{
+    margin-top: 50px;
+  }
+
+  .customs-slider-big-wrapper{
+    height: 120px;
+  }
+
+  .slider-wrapper{
+    height: 100%;
+  }
 }
 
 @media screen and (min-width: 375px) and (max-width: 568px)  {
+  /*HOME PAGE*/
+  .category-wrapper{
+    padding: 10px;
+    margin: -150px 0;
+  }
 
+  .first-category-wrapper{
+    margin-top: 50px;
+  }
+
+  .customs-slider-big-wrapper{
+    height: 120px;
+  }
+
+  .slider-wrapper{
+    height: 100%;
+  }
 }
 
 @media screen and (min-width: 568px) and (max-width: 768px)  {
   /*HOME PAGE*/
   .category-wrapper{
     padding: 10px;
-    margin: 20px;
+    margin: -60px 0;
+  }
+
+  .first-category-wrapper{
+    margin-top: 50px;
+  }
+
+  .customs-slider-big-wrapper{
+    height: 150px;
+  }
+
+  .slider-wrapper{
+    height: 100%;
   }
 }
 
 @media screen and (min-width: 768px) and (max-width: 992px)  {
   /*HOME PAGE*/
   .category-wrapper{
-    padding: 10px;
-    margin: 20px;
+    padding: 5px;
+    margin: -20px 0;
+  }
+
+  .first-category-wrapper{
+       margin-top: 50px;
+  }
+
+  .customs-slider-big-wrapper{
+    height: 250px;
   }
 
   .slider-wrapper{
-    height: 200px;
+    height: 100%;
   }
 }
 
@@ -123,16 +190,32 @@ code {
   /*HOME PAGE*/
   .category-wrapper{
     padding: 10px;
-    margin: 20px;
+    margin: 50px;
+  }
+
+  .customs-slider-big-wrapper{
+    height: 320px;
   }
 
   .slider-wrapper{
-    height: 200px;
+    height: 100%;
   }
 }
 
 @media screen and (min-width: 1200px) and (max-width: 1400px)  {
+  /*HOME PAGE*/
+  .category-wrapper{
+    padding: 10px;
+    margin: 75px;
+  }
 
+  .customs-slider-big-wrapper{
+    height: 350px;
+  }
+
+  .slider-wrapper{
+    height: 100%;
+  }
 }
 
 @media screen and (min-width: 1700px) and (max-width: 1900px)  {
@@ -146,7 +229,15 @@ code {
     margin-top: 50px;
   }
 
-  .slider-wrapper{
+  .customs-slider-big-wrapper{
     height: 500px;
+  }
+
+  .custom-item-wrapper{
+    /*wrapper di ciasuna item*/
+  }
+
+  .slider-wrapper{
+    height: 100%;
   }
 }
