--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,17 @@
+/*# sourceMappingURL=main.11bcc4f7.chunk.css.map */
 body {
   background-color: black!important;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  monospace;
 }
 
 #root{
@@ -92,8 +93,8 @@ code {
 }
 
 .searched-item{
-    flex-basis: 18%!important;
-    margin: 15px 5px;
+  flex-basis: 18%!important;
+  margin: 15px 5px;
 }
 
 /*MOVIE DETAILS*/
@@ -145,6 +146,10 @@ code {
   justify-content: space-around;
 }
 
+.custom-item-wrapper{
+  height: 100%;
+}
+
 .animation-wrapper{
   height: 100%;
 }
@@ -167,7 +172,7 @@ code {
 }
 
 .customs-slider-big-wrapper{
-  height: 200px;
+  height: 100%;
 }
 
 .slider-wrapper{
@@ -198,7 +203,7 @@ code {
 }
 
 /*MEDIA QUERIES*/
-@media screen and (min-width: 240px) and (max-width: 375px)  {
+@media screen and (min-width: 240px) {
   /*HOME PAGE*/
   .category-wrapper{
     padding: 10px;
@@ -210,6 +215,10 @@ code {
   }
 
   .customs-slider-big-wrapper{
+    height: 100%!important;
+  }
+
+  .slider-container{
     height: 120px!important;
   }
 
@@ -218,7 +227,7 @@ code {
   }
 }
 
-@media screen and (min-width: 375px) and (max-width: 568px)  {
+@media screen and (min-width: 375px)  {
   /*HOME PAGE*/
   .category-wrapper{
     padding: 10px;
@@ -229,7 +238,12 @@ code {
     margin-top: 50px;
   }
 
+
   .customs-slider-big-wrapper{
+    height: 100%!important;
+  }
+
+  .slider-container{
     height: 120px!important;
   }
 
@@ -238,7 +252,7 @@ code {
   }
 }
 
-@media screen and (min-width: 568px) and (max-width: 768px)  {
+@media screen and (min-width: 568px)  {
   /*HOME PAGE*/
   .category-wrapper{
     padding: 10px;
@@ -250,6 +264,10 @@ code {
   }
 
   .customs-slider-big-wrapper{
+    height: 100%!important;
+  }
+
+  .slider-container{
     height: 150px!important;
   }
 
@@ -258,7 +276,7 @@ code {
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 992px)  {
+@media screen and (min-width: 768px) {
   /*HOME PAGE*/
   .category-wrapper{
     padding: 5px;
@@ -266,10 +284,14 @@ code {
   }
 
   .first-category-wrapper{
-       margin-top: 50px;
+    margin-top: 50px;
   }
 
   .customs-slider-big-wrapper{
+    height: 100%!important;
+  }
+
+  .slider-container{
     height: 250px!important;
   }
 
@@ -278,7 +300,7 @@ code {
   }
 }
 
-@media screen and (min-width: 992px) and (max-width: 1200px)  {
+@media screen and (min-width: 992px) {
   /*HOME PAGE*/
   .category-wrapper{
     padding: 10px;
@@ -286,6 +308,10 @@ code {
   }
 
   .customs-slider-big-wrapper{
+    height: 100%!important;
+  }
+
+  .slider-container{
     height: 320px!important;
   }
 
@@ -294,7 +320,7 @@ code {
   }
 }
 
-@media screen and (min-width: 1200px) and (max-width: 1400px)  {
+@media screen and (min-width: 1200px) {
   /*HOME PAGE*/
   .category-wrapper{
     padding: 10px;
@@ -302,11 +328,11 @@ code {
   }
 
   .customs-slider-big-wrapper{
-    height: 380px!important;
+    height: 100%!important;
   }
 
   .slider-container{
-    height: 390px;
+    height: 400px!important;
   }
 
   .slider-wrapper{
@@ -314,7 +340,7 @@ code {
   }
 }
 
-@media screen and (min-width: 1700px) and (max-width: 1900px)  {
+@media screen and (min-width: 1700px) {
   /*HOME PAGE*/
   .category-wrapper{
     padding: 20px;
@@ -326,15 +352,11 @@ code {
   }
 
   .customs-slider-big-wrapper{
-    height: 500px!important;
+    height: 100%!important;
   }
 
   .slider-container{
-    height: 500px;
-  }
-
-  .custom-item-wrapper{
-    /*wrapper di ciasuna item*/
+    height: 500px!important;
   }
 
   .slider-wrapper{
